--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "appwrite": "^13.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "konva": "^9.2.3",
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -26,8 +27,10 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
+    "react-konva": "^18.2.10",
     "react-router-dom": "^6.18.0",
     "tailwind-merge": "^2.0.0",
+    "use-image": "^1.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
